# CppTemplateProject

./: .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
tests/: CMakeLists.txt  Test.h  _Template_Tests.cpp
